--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://xamenyap.github.io/personal-blog/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
-theme = "beautifulhugo"
+theme = "PaperMod"
